--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,44 +1,258 @@
-.navbar_base{
+.container{
+    max-width: 100svw !important;
+}
+
+.video_bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+    z-index: -1000;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.video_bg video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.accueil{
+    padding-top: 55vh;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    color: #000000;
+    font-size: 2rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.accueil .btn-plus{
+    margin-top: 20px;
+    padding: 10px 20px;
+    border: 2px solid #000;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: 500;
+    transition: 0.3s;
+}
+
+.accueil .btn-plus:hover{
+    background-color: #2ea2e1;
+    color: #fff;
+    border: 2px solid #03476b;
+    transition: 0.3s;
+}
+
+.accueil .presentation{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    min-height: 80vh;
+    border: 1px solid #000;
+}
+
+.accueil .presentation .text_presentation{
+    width: 50%;
+    padding: 20px;
+    color: #000;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.accueil .presentation .text_presentation h2{
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.accueil .presentation .text_presentation p{
+    margin-top: 20px;
+}
+
+.accueil .presentation .img_presentation{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.accueil .presentation .img_presentation img{
+    width: 80%;
+    height: 80%;
+    object-fit: cover;
+}
+
+.voir_nos_formations{
+    width: 100%;
+    min-height: 80vh;
+    margin-top: 50px;
+
+}
+
+.cards_formation{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    min-height: 80vh;
+    margin-top: 50px;
+}
+
+.cards_formation .card_formation{
+    width: 25%;
+    min-width: 350px;
+    max-width: 360px;
+    height: 50vh;
+    margin: 20px;
+    border: 1px solid #000;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 2%;
-    height: 100px;
-    background-color: #fff;
+    padding: 20px;
+    transition: 0.3s;
+}
+
+.cards_formation .card_formation:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+
+.card_formation img{
+    width: 90px;
+    height: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 360px;
+    background-color: #e6e6e6;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 100svw;
-    position: fixed;
+    padding: 8px;
 }
 
-.navbar_base .logo_nav{
-    display: flex;
-    align-items: center;
-    height: 100%;
+.card_formation .title_formation{
+    margin-top: 20px;
+    font-size: 1.5rem;
+    font-weight: 500;
 }
 
-.logo_nav img{
-    height: 100%;
-    width: 100%;
-    min-width: 80px;
-    min-height: 80px;
+.card_formation .p_formation{
+    margin-top: 20px;
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 
-.liens_nav{
-    display: flex;
-    align-items: center;
-    height: 100%;
-}
-
-.liens_nav a{
-    margin: 0 10px;
+.card_formation .btn_formation{
+    margin-top: 20px;
+    padding: 10px 20px;
+    border: 2px solid #000;
+    border-radius: 5px;
     text-decoration: none;
     color: #000;
     font-size: 1.3rem;
     font-weight: 500;
+    transition: 0.3s;
 }
 
-.liens_nav a:hover{
-    color: #2ea2e1;
+.card_formation .btn_formation:hover{
+    background-color: #77b72d;
+    color: #fff;
+    border: 2px solid #203902;
     transition: 0.3s;
-    transform: scale(1.1);
 }
+
+.contact{
+    width: 90%;
+    min-height: 80vh;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid #000;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.contact .titre_contact{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #000;
+}
+
+.contact .nos_contacts{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    min-height: 50vh;
+}
+
+.contact .nos_contacts .nous_retrouver{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contact .nos_contacts .nous_contacter h3{
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.contact .nos_contacts .nous_contacter p{
+    margin-top: 20px;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.contact .nos_contacts .nous_contacter iframe{
+    margin-top: 20px;
+    width: 100%;
+    height: 50vh;
+}
+
+.contact .nos_contacts .nous_contacter{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.contact .nos_contacts .nous_contacter a{
+    margin-top: 20px;
+    text-decoration: none;
+    color: #000;
+    padding: 0 5px;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.contact .nos_contacts .nous_contacter a:hover{
+    color: #f47011;
+    border-bottom: 3px solid #f47011;
+    transition: 0.2s ease-in-out;
+}
+
+.contact .nos_contacts .nous_contacter h3{
+    font-size: 2rem;
+    font-weight: 700;
+}
+
