--- a/public/style/index.css
+++ b/public/style/index.css
@@ -13,7 +13,7 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.video_bg video{
+.video_bg video{    
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -171,6 +171,46 @@
     color: #fff;
     border: 2px solid #203902;
     transition: 0.3s;
+}
+
+.container_modal{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+
+.container_modal .modal_card{
+    border: 1px solid #000;
+    width: 300px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 5px;
+}
+
+.modal_card img{
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
+    padding: 8px;
+    background-color: #e6e6e6;
+    object-fit: cover;
+}
+
+.modal_card .title_card_modal{
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.modal_card .description_card_modal{
+    font-size: 0.8rem;
+    font-weight: 400;
+
 }
 
 .contact{
