--- a/public/style/index.css
+++ b/public/style/index.css
@@ -188,6 +188,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     padding: 20px;
     margin: 20px;
     border-radius: 5px;
