--- a/public/style/base.css
+++ b/public/style/base.css
@@ -1,8 +1,8 @@
 body{
     scroll-behavior: smooth;
     margin: 0;
-    padding-bottom: 20px;
 }
+
 .navbar_base{
     z-index: 100; /* Evite que les éléments passe par dessus*/
     display: flex;
@@ -52,4 +52,57 @@ body{
     color: #2ea2e1;
     transition: 0.3s;
     transform: scale(1.1);
+}
+
+.footer{
+    border-top: 1px solid #000;
+    width: 100%;
+    height: 18rem;
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer .footer_contact_logo{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    padding: 10px 2%;
+}
+
+.footer .footer_contact_logo img:nth-child(1){
+    height: 130px;
+    width: auto;
+}
+
+.footer .footer_contact_logo img:nth-child(2){
+    height: 80px;
+    width: auto;
+}
+
+.footer .footer_contact_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 10px 2%;
+}
+
+.footer .footer_contact_container_contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: end;
+    height: 50%;
+    padding: 10px 0;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+.footer .footer_contact_container_contact a{
+    text-decoration: none;
+    color: #000;
 }
