--- a/public/style/index.css
+++ b/public/style/index.css
@@ -265,10 +265,11 @@
     font-weight: 500;
 }
 
-.contact .nos_contacts .nous_contacter iframe{
+.contact .nos_contacts .nous_retrouver iframe{
     margin-top: 20px;
     width: 100%;
     height: 50vh;
+    border-radius: 10px;
 }
 
 .contact .nos_contacts .nous_contacter{
@@ -279,23 +280,118 @@
     flex-direction: column;
 }
 
-.contact .nos_contacts .nous_contacter a{
+.contact .nos_contacts .nous_contacter .contact_form{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1.5rem;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form > .container_champs{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: start;
     margin-top: 20px;
+    padding: 10px 10px 10px 35px;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .container_champs label{
+    width: auto;
+    display: flex;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .container_champs input{
+    width: 95%;
+    border: none;
+    border-bottom: 1px solid #000;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .container_champs textarea{
+    width: 95%;
+    border-radius: 5px;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .identite{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .champ_nom{
+    width: 45%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: start;
+    flex-direction: column;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .champ_nom input{
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #000;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .champ_nom label{
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: start;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .champ_prn{
+    width: 45%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: start;
+    flex-direction: column;   
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .champ_prn input{
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #000;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .champ_prn label{
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: start;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form input:focus{
+    outline: none;
+    border-bottom: 1px solid #2ea2e1;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form textarea:focus{
+    outline: none;
+    border: 1px solid #2ea2e1;
+}
+
+.contact .nos_contacts .nous_contacter .contact_form .btn_envoyer{
+    width: 25%;
+    margin-top: 20px;
+    margin-left: 2rem;
+    padding: 10px 20px;
+    border: 2px solid #0000004b;
+    border-radius: 5px;
     text-decoration: none;
     color: #000;
-    padding: 0 5px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
+    transition: 0.3s;
 }
 
-.contact .nos_contacts .nous_contacter a:hover{
-    color: #f47011;
-    border-bottom: 3px solid #f47011;
-    transition: 0.2s ease-in-out;
+.contact .nos_contacts .nous_contacter .contact_form .btn_envoyer:hover{
+    background-color: #2ea2e1;
+    color: #fff;
+    border: 2px solid #03476b52;
+    transition: 0.3s;
 }
-
-.contact .nos_contacts .nous_contacter h3{
-    font-size: 2rem;
-    font-weight: 700;
-}
-
