--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,5 +1,6 @@
 .container{
     max-width: 100svw !important;
+    background-color: whitesmoke;
 }
 
 .video_bg{
@@ -213,6 +214,98 @@
     font-size: 0.8rem;
     font-weight: 400;
 
+}
+
+.cpf {
+    /* background-color: red; */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.cpf .nos_offres{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+
+.cpf .nos_offres .card_offre{
+    background-color: white;
+    box-shadow: -4px 4px 6px 2px rgba(0, 0, 0, 0.1);
+    height: 40rem;
+    width: 30rem;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: 0.3s;
+}
+
+.cpf .nos_offres .card_offre:hover{
+    transform: scale(1.025);
+    transition: 0.3s;
+}
+
+.cpf .nos_offres .card_offre .titre{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.8rem;
+}
+
+.cpf .nos_offres .card_offre .lien_cpf{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cpf .nos_offres .card_offre .lien_cpf .btn_cpf{
+    width: 100%;
+    height: 100%;
+    padding: 5px 25px;
+    border: none;
+    border-radius: 5px;
+    background-color: #2ea2e194;
+    color: #2ea2e1;
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+.cpf .nos_offres .card_offre .lien_cpf .btn_cpf:hover{
+    background-color: #2ea2e1;
+    color: #fff;
+    /* border: 2px solid #03476b52; */
+    transition: 0.3s;
+}
+
+
+.cpf .nos_offres .card_offre .description{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: flex-start;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.cpf .nos_offres .card_offre .description p{
+    text-align: justify;
+}
+
+.cpf .nos_offres .card_offre .description svg{
+    color: #2ea2e1;
 }
 
 .contact{
