--- a/public/style/index.css
+++ b/public/style/index.css
@@ -251,6 +251,7 @@
 
 .cpf .nos_offres .card_offre:hover{
     transform: scale(1.025);
+    box-shadow: -8px 8px 6px 2px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
 
