--- a/public/style/index.css
+++ b/public/style/index.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 50%;
     object-fit: cover;
-    z-index: -1000;
+    /* z-index: -1000; */
     background-color: rgba(0, 0, 0, 0.5);
 }
 
