--- a/public/style/base.css
+++ b/public/style/base.css
@@ -106,4 +106,10 @@ body{
 .footer .footer_contact_container_contact a{
     text-decoration: none;
     color: #000;
+    transition: 0.3s;
+}
+
+.footer .footer_contact_container_contact a:hover{
+    color: #2ea2e1;
+    transition: 0.3s;
 }
