--- a/public/style/index.css
+++ b/public/style/index.css
@@ -247,6 +247,7 @@
     justify-content: space-evenly;
     align-items: center;
     transition: 0.3s;
+    padding-bottom: 20px;
 }
 
 .cpf .nos_offres .card_offre:hover{
